<resources>
    <string name="app_name">MoneyTracker</string>
    <string name="action_settings">Settings</string>
    <string name="nav_drawer_expenses">Expenses</string>
    <string name="nav_drawer_categories">Categories</string>
    <string name="nav_drawer_statistics">Statistics</string>
    <string name="nav_drawer_settings">Settings</string>
    <string name="ini">Russell Gk</string>
    <string name="mail">ruslgee@gmail.com</string>
    <string name="font_ini">roboto-medium</string>
    <string name="font_mail">roboto-regular</string>
    <string name="list_name">Name</string>
    <string name="list_date">Date</string>
    <string name="list_sum">Sum</string>
    <string name="stat_temp">Здесь будет статистика</string>
    <string name="set_temp">Здесь будут настройки</string>
    <string name="add_button_text">Добавить</string>
    <string name="date_hint_text">Current Date</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_login">Login</string>
    <string name="registration_text_view">No account yet? Sign up</string>
    <string name="content_authority">com.hardteam.moneytracker</string>
    <string name="sync_account_type">moneytracker.hardteam.com</string>
    <string name="search_title">Search</string>

    <!--Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Updates Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="pref_enable_sound_key" translatable="false">enable_sound</string>
    <string name="pref_enable_sound_label">Sound</string>

    <string name="pref_enable_vibration_key" translatable="false">enable_vibration</string>
    <string name="pref_enable_vibration_label">Vibration</string>

    <string name="pref_enable_led_key" translatable="false">enable_led</string>
    <string name="pref_enable_led_label">Led</string>

    <!--String for notification bar-->
    <string name="notification_message">Data was synchronized!</string>
    <string name="pref_notification_section">Notifications</string>
</resources>
