<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/drawer_header_height"
    android:background="@mipmap/drawer_patt"
    android:orientation="vertical"
    android:paddingTop="@dimen/padding_top"
    android:paddingLeft="@dimen/padding_left"
    android:paddingBottom="@dimen/padding_header_bottom"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/avatar_layout"
        android:paddingBottom="56dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

     <com.github.siyamed.shapeimageview.CircularImageView
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:id="@+id/photo_new"
         android:src="@mipmap/linfox"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_from_button"
        android:id="@+id/subtitle"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
    
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/iname"
        android:text="@string/ini"
        android:textStyle="bold"
        android:textSize="@dimen/text_ini"
        android:textColor="@color/color_ini"
        android:fontFamily="@string/font_ini"/>

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imail"
        android:text="@string/mail"
        android:textSize="@dimen/text_mail"
        android:textColor="@color/color_mail"
        android:fontFamily="@string/font_mail"/>


    </LinearLayout>

</RelativeLayout>