<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_height"
    android:padding="@dimen/card_layout_margin"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="@dimen/card_corner_radius">
    <RelativeLayout
        style ="@style/Container.Formatted">
     <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_name"
        android:textSize="@dimen/list_text"/>
     <TextView
        android:id="@+id/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_date"
        android:textSize="@dimen/list_text"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        />
     <TextView
        android:id="@+id/sum_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_sum"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/list_text"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>